test/expected/explain_sc8.out
explain signed char8_t x
               ^
16: error: "signed char8_t" is illegal for built-in type
